// Copyright 2015 The Cockroach Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied. See the License for the specific language governing
// permissions and limitations under the License. See the AUTHORS file
// for names of contributors.
//
// Author: Spencer Kimball (spencer.kimball@gmail.com)

syntax = "proto2";
package cockroach.gossip;
option go_package = "gossip";

import "cockroach/proto/data.proto";
import "cockroach/proto/metadata.proto";
import "cockroach/util/unresolved_addr.proto";
import "gogoproto/gogo.proto";

// These options generate broken code when using maps.
// option (gogoproto.sizer_all) = true;
// option (gogoproto.marshaler_all) = true;
// option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

// Request is the request struct passed with the Gossip RPC.
message Request {
  // Requesting node's ID.
  optional int32 node_id = 1 [(gogoproto.nullable) = false,
      (gogoproto.customname) = "NodeID",
      (gogoproto.casttype) = "github.com/cockroachdb/cockroach/proto.NodeID"];
  // Address of the requesting client.
  optional util.UnresolvedAddr addr = 2 [(gogoproto.nullable) = false];
  // Local address of client on requesting node (this is a kludge to
  // allow gossip to know when client connections are dropped).
  optional util.UnresolvedAddr l_addr = 3 [(gogoproto.nullable) = false];
  // Maximum sequence number of gossip from this peer.
  optional int64 max_seq = 4 [(gogoproto.nullable) = false];
  // Reciprocal delta of new info since last gossip.
  optional InfoStoreDelta delta = 5 [(gogoproto.nullable) = false];
}

// Response is returned from the Gossip.Gossip RPC.
// Delta will be nil in the event that Alternate is set.
message Response {
  // Requested delta of server's infostore.
  optional InfoStoreDelta delta = 1 [(gogoproto.nullable) = false];
  // Non-nil means client should retry with this address.
  optional util.UnresolvedAddr alternate = 2;
}

// TODO(thschroeter): check if all fields below are required
message InfoStoreDelta {
  // Map from key to info.
  map<string, Info> infos = 1;
  // Owning node's ID
  optional int32 node_id = 2 [(gogoproto.nullable) = false,
      (gogoproto.customname) = "NodeID",
      (gogoproto.casttype) = "github.com/cockroachdb/cockroach/proto.NodeID"];
  // Address of node owning this info store.
  optional util.UnresolvedAddr node_addr = 3 [(gogoproto.nullable) = false];
  // Maximum sequence number inserted
  optional int64 max_seq = 4 [(gogoproto.nullable) = false];
}

// Info is the basic unit of information traded over the
// gossip network.
message Info {
  optional proto.Value value = 1 [(gogoproto.nullable) = false];
  // Wall time when info is to be discarded (Unix-nanos)
  optional int64 ttl_stamp = 2 [(gogoproto.nullable) = false,
      (gogoproto.customname) = "TTLStamp"];
  // Number of hops from originator
  optional uint32 hops = 3 [(gogoproto.nullable) = false];
  // Originating node's ID
  optional int32 node_id = 4 [(gogoproto.nullable) = false,
      (gogoproto.customname) = "NodeID",
      (gogoproto.casttype) = "github.com/cockroachdb/cockroach/proto.NodeID"];
}
